compiler/weave_syntax/tests/data/Numbers.error
error: fractional part must not start with '_'
        --> <source>:13:2
         |
      13 | 0._3
         |  ^^^
error: fractional part must not start with '_'
        --> <source>:14:2
         |
      14 | 0._3_
         |  ^^^^
error: fractional part must not start with '_'
        --> <source>:15:2
         |
      15 | 0._3_e
         |  ^^^^
error: fractional part must not start with '_'
        --> <source>:16:2
         |
      16 | 0._3_e10
         |  ^^^^
error: fractional part must not start with '_'
        --> <source>:17:2
         |
      17 | 0._3_e10_f32
         |  ^^^^
error: expected at least one digit in exponent
        --> <source>:19:1
         |
      19 | 0.3_e_
         | ^^^^^
error: expected at least one digit in exponent
        --> <source>:20:1
         |
      20 | 0.3_e_ struct
         | ^^^^^
error: expected at least one digit in exponent
        --> <source>:28:1
         |
      28 | 10e_+_10_f32
         | ^^^
error: expected at least one digit in exponent
        --> <source>:31:1
         |
      31 | 10_e+_f32
         | ^^^^^
error: binary float literals are not supported
        --> <source>:35:1
         |
      35 | 0b10.0f32
         | ^^^^^^^^^
error: invalid digit for base 2 literal
        --> <source>:41:4
         |
      41 | 0b121
         |    ^
error: invalid digit for base 2 literal
        --> <source>:42:8
         |
      42 | 0b10_10301
         |        ^
error: invalid digit for base 2 literal
        --> <source>:43:3
         |
      43 | 0b30
         |   ^
error: invalid digit for base 2 literal
        --> <source>:44:3
         |
      44 | 0b41
         |   ^
error: invalid digit for base 2 literal
        --> <source>:45:3
         |
      45 | 0b5
         |   ^
error: invalid digit for base 2 literal
        --> <source>:46:3
         |
      46 | 0b6
         |   ^
error: invalid digit for base 2 literal
        --> <source>:47:3
         |
      47 | 0b7
         |   ^
error: invalid digit for base 2 literal
        --> <source>:48:3
         |
      48 | 0b8
         |   ^
error: invalid digit for base 2 literal
        --> <source>:49:3
         |
      49 | 0b9
         |   ^
error: octal float literals are not supported
        --> <source>:50:1
         |
      50 | 0o1.0
         | ^^^^^
error: octal float literals are not supported
        --> <source>:52:1
         |
      52 | 0o3.0f32
         | ^^^^^^^^
error: expected at least one digit in value
        --> <source>:53:1
         |
      53 | 0x.3f32
         | ^^
error: octal float literals are not supported
        --> <source>:55:1
         |
      55 | 0o4e4
         | ^^^^^
error: octal float literals are not supported
        --> <source>:56:1
         |
      56 | 0o5.0e5
         | ^^^^^^^
error: octal float literals are not supported
        --> <source>:57:1
         |
      57 | 0o6e6f32
         | ^^^^^^^^
error: octal float literals are not supported
        --> <source>:58:1
         |
      58 | 0o7.0e7f64
         | ^^^^^^^^^^
error: hexadecimal floating literal requires exponent
        --> <source>:59:1
         |
      59 | 0x8.0e+9
         | ^^^^^^
error: hexadecimal floating literal requires exponent
        --> <source>:60:1
         |
      60 | 0x9.0e-9
         | ^^^^^^
error: expected at least one digit in value
        --> <source>:62:1
         |
      62 | 0o
         | ^^
error: expected at least one digit in exponent
        --> <source>:63:1
         |
      63 | 1e+
         | ^^^
error: hexadecimal floating literal requires exponent
        --> <source>:65:1
         |
      65 | 0x539.0
         | ^^^^^^^
error: expected at least one digit in value
        --> <source>:66:1
         |
      66 | 0x
         | ^^
error: expected at least one digit in value
        --> <source>:67:1
         |
      67 | 0xu32
         | ^^
error: expected at least one digit in value
        --> <source>:68:1
         |
      68 | 0ou32
         | ^^
error: expected at least one digit in value
        --> <source>:69:1
         |
      69 | 0bu32
         | ^^
error: expected at least one digit in value
        --> <source>:70:1
         |
      70 | 0b
         | ^^
error: octal float literals are not supported
        --> <source>:72:1
         |
      72 | 0o123.456
         | ^^^^^^^^^
error: binary float literals are not supported
        --> <source>:74:1
         |
      74 | 0b111.101
         | ^^^^^^^^^
error: invalid digit for base 8 literal
        --> <source>:75:4
         |
      75 | 0o18
         |    ^
error: invalid digit for base 8 literal
        --> <source>:76:8
         |
      76 | 0o1234_9_5670
         |        ^
error: invalid base prefix for hexadecimal number literal
        --> <source>:80:1
         |
      80 | 0XYZ
         | ^^
error: expected at least one digit in value
        --> <source>:80:1
         |
      80 | 0XYZ
         | ^^
error: invalid base prefix for octal number literal
        --> <source>:81:1
         |
      81 | 0OPQ
         | ^^
error: expected at least one digit in value
        --> <source>:81:1
         |
      81 | 0OPQ
         | ^^
error: expected at least one digit in exponent
        --> <source>:81:1
         |
      81 | 0OPQ
         | ^^^
error: invalid base prefix for binary number literal
        --> <source>:82:1
         |
      82 | 0BCD
         | ^^
error: expected at least one digit in value
        --> <source>:82:1
         |
      82 | 0BCD
         | ^^
error: invalid base prefix for hexadecimal number literal
        --> <source>:83:1
         |
      83 | 0XABCDEF
         | ^^
error: invalid base prefix for octal number literal
        --> <source>:84:1
         |
      84 | 0O755
         | ^^
error: invalid base prefix for binary number literal
        --> <source>:85:1
         |
      85 | 0B10101010
         | ^^
error: invalid base prefix for hexadecimal number literal
        --> <source>:86:1
         |
      86 | 0XABC_DEF
         | ^^
error: invalid base prefix for octal number literal
        --> <source>:87:1
         |
      87 | 0O7_55
         | ^^
error: invalid base prefix for binary number literal
        --> <source>:88:1
         |
      88 | 0B1010_1010
         | ^^
error: invalid base prefix for hexadecimal number literal
        --> <source>:89:1
         |
      89 | 0XABC_DEF_u64
         | ^^
error: invalid base prefix for octal number literal
        --> <source>:90:1
         |
      90 | 0O7_55_u32
         | ^^
error: invalid base prefix for binary number literal
        --> <source>:91:1
         |
      91 | 0B1010_1010_u8
         | ^^
error: invalid base prefix for hexadecimal number literal
        --> <source>:92:1
         |
      92 | 0XABCDEFu64
         | ^^
error: invalid base prefix for octal number literal
        --> <source>:93:1
         |
      93 | 0O755u32
         | ^^
error: invalid base prefix for binary number literal
        --> <source>:94:1
         |
      94 | 0B10101010u8
         | ^^
error: invalid base prefix for hexadecimal number literal
        --> <source>:95:1
         |
      95 | 0XABCDEFf64
         | ^^
error: binary float literals are not supported
        --> <source>:108:1
         |
     108 | 0b1111.1111
         | ^^^^^^^^^^^
error: binary float literals are not supported
        --> <source>:109:1
         |
     109 | 0b1111e+111
         | ^^^^^^^^^^^
error: binary float literals are not supported
        --> <source>:110:1
         |
     110 | 0b1111.111e+111
         | ^^^^^^^^^^^^^^^
error: hexadecimal floating literal requires exponent
        --> <source>:116:1
         |
     116 | 0x1111.1111
         | ^^^^^^^^^^^
error: binary float literals are not supported
        --> <source>:119:1
         |
     119 | 0b1111_1111.101e+101
         | ^^^^^^^^^^^^^^^^^^^^
error: Expected '[token:identifier]'
        --> <source>:4:1
         |
       4 | 3.3.3
         | ^^^
error: Expected '[token:identifier]'
        --> <source>:6:1
         |
       6 | 3.3.3.3
         | ^^^
error: Expected '[token:identifier]'
        --> <source>:6:5
         |
       6 | 3.3.3.3
         |     ^^^
error: Expected '[token:identifier]'
        --> <source>:12:3
         |
      12 | 0._
         |   ^
error: Unexpected tokens
        --> <source>:12:3
         |
      12 | 0._
         |   ^
      13 | 0._3
         | ^^^^
      14 | 0._3_
         | ^^^^^
     ... |
     118 | 0x1111.111p+111
         | ^^^^^^^^^^^^^^^
     119 | 0b1111_1111.101e+101
         | ^^^^^^^^^^^^^^^^^^^^
     120 | 21.37m32
         | ^^^^^^^^
